# realpython-tutorials

./: LICENSE.md  README.md
flashcards-django/: README.md
flashcards-django/cards/: forms.py  models.py  views.py
flashcards-django/cards/migrations/: 0001_initial.py
flashcards-django/cards/templates/cards/: base.html  box.html  box_links.html  card.html  card_check_form.html  card_form.html  card_list.html
flashcards-django/cards/templatetags/: cards_tags.py
flashcards-django/flashcards/: settings.py  urls.py
grpc-microservices/: .dockerignore  README.md  docker-compose.yaml
grpc-microservices/marketplace/: Dockerfile  marketplace.py  requirements.txt
grpc-microservices/marketplace/templates/: homepage.html
grpc-microservices/recommendations/: Dockerfile  recommendations.py  requirements.txt
hashtable/: README.md  hashtable.py  test_hashtable.py
openai-dall-e-2/: .gitignore  README.md  converter.py  requirements.txt
portfolio-django/: README.md
portfolio-django/personal_portfolio/: settings.py  urls.py
portfolio-django/personal_portfolio/templates/: base.html
portfolio-django/projects/: views.py
portfolio-django/projects/migrations/: 0001_initial.py
publish-package-to-pypi/: .gitignore  README.md  pyproject.toml
publish-package-to-pypi/reader/: __init__.py
site-connectivity-checker/: README.md  sample-urls.txt
site-connectivity-checker/rpchecker/: __main__.py  checker.py  cli.py
todo-list-django/: README.md  requirements.txt
todo-list-django/todo_app/: models.py  urls.py  views.py
todo-list-django/todo_app/migrations/: 0001_initial.py
todo-list-django/todo_app/templates/todo_app/: index.html  todo_list.html  todoitem_confirm_delete.html  todoitem_form.html  todolist_form.html
todo-list-django/todo_project/: asgi.py  settings.py  urls.py  wsgi.py
url-shortener-fastapi/: .env.sample  README.md  requirements.txt
url-shortener-fastapi/shortener_app/: config.py  crud.py  database.py  main.py
vectordb-with-chromadb/: README.md  chroma-minilm.ipynb  chroma-tu.ipynb  requirements.txt  utils.py
